# tetris

./: meson.build  tetris.c
src/: main.c  tetris.c  tetris.h
test/: main.c
